--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Index - Hazelnut</title>
-        <link rel="stylesheet" href="style.css" />
-        <link rel="icon" href="favicon.png" />
+        <link rel="stylesheet" href="https:&#x2F;&#x2F;hazellanes.github.io&#x2F;website&#x2F;style.css" />
+        <link rel="icon" href="https:&#x2F;&#x2F;hazellanes.github.io&#x2F;website&#x2F;favicon.png" />
         
     </head>
     <body>
