Publishing to gh-pages (deploy.sh)

--- a/glog/index.html
+++ b/glog/index.html
@@ -218,11 +218,14 @@
 <p><strong>Intelligence:</strong> Test Intelligence to solve tricky problems, read obscure texts, identify items and treasure, etc.</p>
 <p><strong>Wisdom:</strong> Test wisdom to see through deceit, spot hidden dangers, avoid mind-altering effects, etc. Characters use Wisdom to determine the order of combat.</p>
 <p><strong>Charisma:</strong> Roll under wisdom to flatter, deceive, barter, threaten, etc. A character's Charisma may also influence a character's fate or luck.</p>
-<table><thead><tr><th>Stat</th><th align="center">Bonus</th><th>Stat</th><th align="center">Bonus</th><th>Stat</th><th align="center">Bonus</th></tr></thead><tbody>
+<div class="table-wrapper">
+    <table><thead><tr><th>Stat</th><th align="center">Bonus</th><th>Stat</th><th align="center">Bonus</th><th>Stat</th><th align="center">Bonus</th></tr></thead><tbody>
 <tr><td>1,2</td><td align="center">-3</td><td>9,10,11</td><td align="center">0</td><td>18,19,20</td><td align="center">+3</td></tr>
 <tr><td>3,4,5</td><td align="center">-2</td><td>12,13,14</td><td align="center">+1</td><td>21,22,23</td><td align="center">+4</td></tr>
 <tr><td>6,7,8</td><td align="center">-1</td><td>15,16,17</td><td align="center">+2</td><td>24+</td><td align="center">+5</td></tr>
 </tbody></table>
+
+</div>
 <h2 id="stat-tests">Stat Tests</h2>
 <p>If an action could fail in an interesting way, a test of a stat will be called for. Roll a d20 and add the relevant stat. If the result is at or above 20, the PC succeeds. If the result is below 20, they fail.</p>
 <p>Rolling a natural 1 is always a failure, and could possibly have further negative consequences depending on the situation. Rolling a natural 20 is always a success, and could also have further beneficial consequences depending on the situation.</p>
@@ -296,12 +299,15 @@
 </ol>
 <h2 id="reaction-and-morale-rolls">Reaction and Morale Rolls</h2>
 <p>When encountering monsters, roll 2d6 + the CHA bonus of the most visible party member.</p>
-<table><thead><tr><th align="right">2d6+</th><th>Result</th><th>Notes</th></tr></thead><tbody>
+<div class="table-wrapper">
+    <table><thead><tr><th align="right">2d6+</th><th>Result</th><th>Notes</th></tr></thead><tbody>
 <tr><td align="right">2 or less</td><td>Immediate Attack</td><td>Offended or disgusted.</td></tr>
 <tr><td align="right">3-7</td><td>Unfavorable</td><td>May attack if victory likely.</td></tr>
 <tr><td align="right">8-11</td><td>Favorable</td><td>Parley or bargaining.</td></tr>
 <tr><td align="right">12 or more</td><td>Very Favorable</td><td>May choose to cooperate.</td></tr>
 </tbody></table>
+
+</div>
 <p>Monsters (or hirelings) may try to run away or surrender if combat turns against them. Monsters have a Morale value listed from 2 (craven) to 12 (unbreakable). Check morale when:</p>
 <ol>
 <li>
@@ -320,16 +326,22 @@
 <p>The effects are cumulative. If PC with -8 HP and no current Injuries rolls a 10 on a d12, to the leg, X = 10+8+0 = 18. They gain 4 Fatal Wounds, the leg is Mangled, and also disabled for 18 days.</p>
 <p>If they took a further 1 point of damage (-9 HP), they would roll 1d12 + 9 (Lethal Damage) + 1 (Mangled) + 1 (Disabled) for 1d12+11.</p>
 <p>If required, roll 1d6 for location.</p>
-<table><thead><tr><th align="right">Result</th><th>1. Arm</th><th>2. Leg</th><th>3-4. Torso</th><th>5-6. Head</th></tr></thead><tbody>
+<div class="table-wrapper">
+    <table><thead><tr><th align="right">Result</th><th>1. Arm</th><th>2. Leg</th><th>3-4. Torso</th><th>5-6. Head</th></tr></thead><tbody>
 <tr><td align="right">1+</td><td>Disabled X Days</td><td>Disabled X Days</td><td>Cracked Ribs X Days</td><td>Concussed X Days</td></tr>
 <tr><td align="right">11+</td><td>1 Fatal Wound, Mangled</td><td>1 Fatal Wound, Mangled</td><td>1 Fatal Wound, Crushed</td><td>1 Fatal Wound, Skullcracked</td></tr>
 <tr><td align="right">16+</td><td>X-15 Fatal Wounds</td><td>X-15 Fatal Wounds</td><td>X-15 Fatal Wounds</td><td>X-15 Fatal Wounds</td></tr>
 </tbody></table>
-<table><thead><tr><th align="right">Result</th><th>Acid, Fire / Cold, Ice</th><th>Lightning</th><th>Venom / Toxin</th><th>Magic</th></tr></thead><tbody>
+
+</div>
+<div class="table-wrapper">
+    <table><thead><tr><th align="right">Result</th><th>Acid, Fire / Cold, Ice</th><th>Lightning</th><th>Venom / Toxin</th><th>Magic</th></tr></thead><tbody>
 <tr><td align="right">1+</td><td>Scorched / Frostbite X Days</td><td>Burned X Days</td><td>Sickened X Days</td><td>Anathema X Days</td></tr>
 <tr><td align="right">11+</td><td>1 Fatal Wound, Burned / Frozen</td><td>1 Fatal Wound, Fried</td><td>1 Fatal Wound, Wracked</td><td>1 Fatal Wound, Marked</td></tr>
 <tr><td align="right">16+</td><td>X-15 Fatal Wounds</td><td>X-15 Fatal Wounds</td><td>X-15 Fatal Wounds</td><td>X-15 Fatal Wounds</td></tr>
 </tbody></table>
+
+</div>
 <h2 id="fatal-wounds">Fatal Wounds</h2>
 <p>A PC has 3 rounds to clear any Fatal Wounds or they die. They can attempt to remove a Fatal Wound on their turn by rolling a 6 on a d6. PCs with fatal wounds are &quot;unconscious&quot; in the fact that they cannot take conscious or deliberate actions, they are not necessarily quiet or asleep and could be quite the opposite, screaming in pain, etc. Remove oldest Fatal Wounds first.</p>
 <p>Up to two adjacent allies can try to remove Fatal Wounds from a dying character by spending their turn doctoring the wounded PC and then testing 1/2 Intelligence (unless they have a relevant skill).</p>
@@ -435,11 +447,14 @@
 <p>A &quot;box&quot; of a weapon's ammo takes up 1 Inventory Slot and costs <strong>one tenth</strong> the price of the weapon.</p>
 <h2 id="light-sources">Light Sources</h2>
 <p>Outside of the listed light range, light sources illuminate shadows. Vague shapes, movement, and reflective surfaces will be visible in shadows, but no details can be distinguished. Lighting a torch or lantern takes 1 round. PCs are assumed to be carrying basic firestarting gear. Magic or cantrips may ignite a light source immediately.</p>
-<table><thead><tr><th>Light Source</th><th>Radius</th><th>Duration</th></tr></thead><tbody>
+<div class="table-wrapper">
+    <table><thead><tr><th>Light Source</th><th>Radius</th><th>Duration</th></tr></thead><tbody>
 <tr><td>Torch</td><td>20' light, 20' shadows</td><td>1 hour</td></tr>
 <tr><td>Lantern</td><td>30' light, 30' shadows</td><td>3 hours / flask of oil</td></tr>
 <tr><td>Candle</td><td>5' light, 10' shadows</td><td>1 hour</td></tr>
 </tbody></table>
+
+</div>
 <h2 id="hirelings">Hirelings</h2>
 <p>Hired at a fixed rate or purchased. Dangerous work may require bonuses. Generic hirelings have 10 in all stats, 5 HP, and no skills outside their profession.</p>
 <p>PCs can have up to 2 + CHA bonus hirelings without any issues. Mounts, slaves, and other pliable things don't count. Extra hirelings can be aquired, but may be disloyal, cunning, or poor quality.</p>
@@ -486,7 +501,8 @@
 <h2 id="levelling-up">Levelling Up</h2>
 <p>PCs gain experience points (XP) by exploring or carousing. Exploring grants XP based on new locations reached. Fully investigating or mapping a location, or figuring out what is going on, grants more XP. Carousing gives PCs a way to convert loot into levels.</p>
 <p>Whenever a PC levels, increase their Meat, reroll their Grit according to their level and take the result if it is higher than the existing value. A PC can also test to improve a stat of their choice. Declare the stat and roll 3d6. If the result is over, the stat's value increases by 1.</p>
-<table><thead><tr><th align="right">Level</th><th align="left">XP</th><th align="left">Meat</th><th align="left">Grit</th><th align="center">Templates</th></tr></thead><tbody>
+<div class="table-wrapper">
+    <table><thead><tr><th align="right">Level</th><th align="left">XP</th><th align="left">Meat</th><th align="left">Grit</th><th align="center">Templates</th></tr></thead><tbody>
 <tr><td align="right">1</td><td align="left">-</td><td align="left">Con - 4</td><td align="left">1d6 + 1</td><td align="center">1</td></tr>
 <tr><td align="right">2</td><td align="left">300</td><td align="left">Con - 2</td><td align="left">2d6 + 2</td><td align="center">2</td></tr>
 <tr><td align="right">3</td><td align="left">700</td><td align="left">Con</td><td align="left">3d6 + 3</td><td align="center">3</td></tr>
@@ -499,6 +515,8 @@
 <tr><td align="right">10</td><td align="left">22,000</td><td align="left">Con + 10</td><td align="left">3d6 + 10</td><td align="center">-</td></tr>
 <tr><td align="right">+1</td><td align="left">+15,000</td><td align="left">+1</td><td align="left">+1</td><td align="center">-</td></tr>
 </tbody></table>
+
+</div>
 <p>At level 5 and above, every time a PC levels up, they can retire to safety. They leave the adventure to settle down, buy some land if they can afford it, open a shop, teach at a school, beg in the gutter, etc. The GM can torment them no longer.</p>
 <p>At level 10 and above, a PC who dies can attempt to fight death. Should they best whatever reaper or being has come to collect their soul, they can return to life or possibly work out some other deal. Future saves to avoid death will be at a penalty.</p>
 
