Publishing to gh-pages (deploy.sh)

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ I do not know how to talk about myself with sentences so I guess that is that.</
 <tr><td>Fedi:</td><td><a href="https://hellsite.site/@hazel">@hazel@hellsite.site</a></td></tr>
 </tbody></table>
 
+<a rel="me" href="https://hellsite.site/@hazel"></a>
 
         </div>
         <div id="footer">
