Publishing to gh-pages (deploy.sh)

--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@ I do not know how to talk about myself with sentences so I guess that is that.</
 <tr><td>Email:</td><td><a href="mailto:hazelra@disroot.org">hazelra@disroot.org</a></td></tr>
 <tr><td>Github:</td><td><a href="https://github.com/hazelLanes">https://github.com/hazelLanes</a></td></tr>
 <tr><td>itch.io:</td><td><a href="https://hazellanes.itch.io">https://hazellanes.itch.io</a></td></tr>
-<tr><td>Fedi:</td><td><a href="https://hellsite.site/@hazel">@hazel@hellsite.site</a></td></tr>
+<tr><td>Fedi:</td><td><a rel="me" href="https://hellsite.site/@hazel">@hazel@hellsite.site</a></td></tr>
 </tbody></table>
 
-<a rel="me" href="https://hellsite.site/@hazel"></a>
 
         </div>
         <div id="footer">
