Publishing to gh-pages (deploy.sh)

--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
 
         <div id="content">
             
-<h1 id="hewwo">Hewwo</h1>
+<p>Welcome to my site on the web. There is not really much to be seen here currently,
+but hopefully that should change through time.</p>
+<h2 id="who">Who</h2>
 <p>I am Hazel. I think I am pretty neat. I make and do stuff sometimes.
 I do not know how to talk about myself with sentences so I guess that is that.</p>
-<h2 id="elsewhere-i-exist">Elsewhere I Exist</h2>
+<h2 id="where">Where</h2>
 <table><thead><tr><th></th><th></th></tr></thead><tbody>
 <tr><td>Email:</td><td><a href="mailto:hazelra@disroot.org">hazelra@disroot.org</a></td></tr>
 <tr><td>Github:</td><td><a href="https://github.com/hazelLanes">https://github.com/hazelLanes</a></td></tr>
